--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,14 @@
 body{
+	font-size: 16px;
 	background-color: #B6A19E;
+	font-family: 'Slabo 27px', serif;
+	margin: 0px;
 }
 
 header{
 	font-family: 'Slabo 27px', serif;
-	height: 120px;
 	color:white;
 	background-color: #6C648B;
-}
-
-h1{
-	text-align: center;
-	font-style: bold;
-	text-transform: uppercase;
-	font-size: 50px;
-
-}
-
-h3{
-	text-align: center;
-}
-
-
-
-.navbar{
-	background-color: #6BBAA7;
 }
 
 footer{
@@ -32,6 +16,69 @@ footer{
 	background-color: #6C648B;
 }
 
+h1 a{
+	font-family: 'Slabo 27px', serif;
+	color: white;
+	text-transform: uppercase;
+	text-decoration: none;
 
+}
+
+h1, a:hover{
+	text-decoration: none;
+	color: #FBA100;
+}
+
+h1, h3{
+	text-align: center;
+}
+
+
+
+#first{
+	align-content: center;
+}
+
+.navbar{
+	background-color: #6BBAA7;
+}
+
+#bigImage{
+display: block;
+margin:auto;
+width: 100%;
+margin-bottom: 20px;
+margin-top: 10px;
+}
+
+#smallImage{
+display: block;
+margin:auto;
+width: 100%;
+border: 2px solid white;
+}
+
+nav.navbar.navbar-default{
+	height: 20px;
+}
+
+#collapsable-nav{
+  width: 100%;
+  text-align: center;
+  background-color: #6BBAA7;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+#home-tiles{
+	margin-bottom: 20px;
+	width: 100%;
+	margin-bottom: 20px;
+	overflow: hidden;
+}
+
+nav#header-nav.navbar.navbar-default{
+	margin-bottom: 0px;
+}
 
 
