--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ margin:auto;
 width: 100%;
 margin-bottom: 20px;
 margin-top: 10px;
+position: relative;
 }
 
 #smallImage{
@@ -71,10 +72,10 @@ nav.navbar.navbar-default{
 }
 
 #home-tiles{
-	margin-bottom: 20px;
+	margin:0px;
+	padding: 0px;
+	margin-bottom: 10px;
 	width: 100%;
-	margin-bottom: 20px;
-	overflow: hidden;
 }
 
 nav#header-nav.navbar.navbar-default{
@@ -82,3 +83,11 @@ nav#header-nav.navbar.navbar-default{
 }
 
 
+@media(max-width: 479px){
+	#home-tiles{
+	margin-bottom: 10px;
+	width: 100%;
+	overflow: hidden;
+	padding: 0;
+}
+}
