--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ footer{
 }
 
 h1 a{
+	font-size: 18px;
 	font-family: 'Slabo 27px', serif;
 	color: white;
 	text-transform: uppercase;
@@ -68,7 +69,7 @@ nav.navbar.navbar-default{
   text-align: center;
   background-color: #6BBAA7;
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 #home-tiles{
@@ -103,3 +104,83 @@ p{
 	text-align: justify;
 	font-size: 0.9em;
 }
+
+ul#nav-list.nav.navbar-nav.navbar-right{
+	margin: 0;
+	margin-bottom: 10px;
+}
+
+ul#nav-list.nav.navbar-nav.navbar-right.visible-xs{
+	margin: 0;
+	margin-bottom: 10px;
+}
+
+
+
+
+nav#header-nav.navbar.navbar-default{
+	margin-bottom: 0px;
+}
+
+.navbar-brand.visible-xs#home{
+	margin-bottom: 10px;
+}
+
+.navbar-nav>li>a:hover{
+	background-color: #6BBAA7;
+}
+
+#home{
+	font-size: 18px;
+	color: white;
+}
+
+#vidovdanija{
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  border: none;
+  font-family: 'Slabo 27px', serif;
+  font-size: 50px;
+  color: rgba(255,255,255,1);
+  text-decoration: normal;
+  text-align: center;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  white-space: pre;
+  text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #ff00de , 0 0 70px #ff00de , 0 0 80px #ff00de , 0 0 100px #ff00de ;
+  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+#vidovdanija:hover {
+  text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #00ffff , 0 0 70px #00ffff , 0 0 80px #00ffff , 0 0 100px #00ffff ;
+}
+
+
+a{
+	color: white;
+}
+
+a:hover{
+background-color:transparent;
+color:white;
+text-shadow: -2px 2px 20px #ffc, 2px -2px 20px #fff;
+}
+
+.navbar-default .navbar-toggle.collapsed .icon-bar {
+    background-color: white;
+    padding: 0px;
+}
+.navbar-default .navbar-nav>li>a {
+    color: white;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+    color: white;
+}
+
