--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,11 @@ p{
 	text-align: justify;
 	font-size: 0.5em;
 }
+
+
+
+
+
 }
 
 p{
@@ -136,30 +141,12 @@ nav#header-nav.navbar.navbar-default{
 }
 
 #vidovdanija{
-  display: inline-block;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 10px;
-  border: none;
-  font-family: 'Slabo 27px', serif;
-  font-size: 50px;
-  color: rgba(255,255,255,1);
-  text-decoration: normal;
-  text-align: center;
-  -o-text-overflow: clip;
-  text-overflow: clip;
-  white-space: pre;
-  text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #ff00de , 0 0 70px #ff00de , 0 0 80px #ff00de , 0 0 100px #ff00de ;
-  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+	font-family: 'Slabo 27px', serif;
+	font-size: 1.8em;
+    text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px rgba(44,88,137,1) , 0 0 70px rgba(44,88,137,1) , 0 0 80px rgba(44,88,137,1) , 0 0 100px rgba(44,88,137,1) ;
+
 }
 
-#vidovdanija:hover {
-  text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #00ffff , 0 0 70px #00ffff , 0 0 80px #00ffff , 0 0 100px #00ffff ;
-}
 
 
 a{
