--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ nav#header-nav.navbar.navbar-default{
 
 #vidovdanija{
 	font-family: 'Slabo 27px', serif;
-	font-size: 1.4em;
+	font-size: 50px;
 }
 
 a:hover#vidovdanija{
