--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@ header{
 	font-family: 'Slabo 27px', serif;
 	color:white;
 
-background: #F0C27B; /* fallback for old browsers */
+
+background: #373737; /* fallback for old browsers */
 background: -webkit-linear-gradient(to bottom, #373737 , #d7cec7); /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to bottom, #373737 , #d7cec7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
@@ -24,7 +25,7 @@ footer{
 }
 
 h1 a{
-	font-size: 18px;
+	font-size: 1.8em;
 	font-family: 'Slabo 27px', serif;
 	color: white;
 	text-transform: uppercase;
@@ -184,8 +185,9 @@ text-shadow: -2px 2px 20px #ffc, 2px -2px 20px #fff;
 }
 
 .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-	color: black;
-    background-color: transparent;
+	background-color:transparent;
+color:white;
+text-shadow: -2px 2px 20px #ffc, 2px -2px 20px #fff;
 }
 
 #copyright{
